--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Nakdeknaknan by tanyakenapa10</title>
+    <title>Nakdek Mama muda</title>
   </head>
 
   <body>
