--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Nakdeknaknan</h1>
-            <h2>TKTDW Blank Cloth</h2>
+            <h1>Nakdek Mama Muda Dek</h1>
+            <h2>Ayo Naik mama muda!</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
